some fix, do cd, printing path